--- a/CoffeeManagement/nbproject/project.properties
+++ b/CoffeeManagement/nbproject/project.properties
@@ -27,15 +27,16 @@ dist.dir=dist
 dist.jar=${dist.dir}/CoffeeManagement.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.jcalendar-1.2.2.jar=jcalendar-1.2.2.jar
+file.reference.AbsoluteLayout.jar=lib\\AbsoluteLayout.jar
+file.reference.jcalendar-1.2.2.jar=lib\\jcalendar-1.2.2.jar
 file.reference.mssql-jdbc-8.2.0.jre8.jar=lib\\mssql-jdbc-8.2.0.jre8.jar
-file.reference.mssql-jdbc-8.2.0.jre8.jar-1=dist\\lib\\mssql-jdbc-8.2.0.jre8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.2.2.jar}:\
-    ${file.reference.mssql-jdbc-8.2.0.jre8.jar-1}:\
-    ${file.reference.mssql-jdbc-8.2.0.jre8.jar}
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.mssql-jdbc-8.2.0.jre8.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
